--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <h2 data-testid="slackDisplayName">Abu Israel Adejo</h2>
-            <img src="https://ca.slack-edge.com/T07466B189M-U079YQNC5JB-e64160dbaa9e-512" alt="Slack Profile Picture" data-testid="slackProfilePicture" width="531" height="751">
+            <img src="IMG 531x751.jpg" alt="Slack Profile Picture" data-testid="slackProfilePicture" width="531" height="751">
             <p data-testid="slackEmail">israelabu11@gmail.com</p>
             <p data-testid="currentTimeUTC">Current Time in UTC: <span id="utcTime"></span></p>
             <p data-testid="currentDay">Current Day of the Week: <span id="dayOfWeek"></span></p>
